# video_analytics

./: .gitignore  CMakeLists.txt  README.md  analyze.py  build.sh  measure_time.py  measure_trace.py  run.sh  system_wide_trace_cfg.pbtxt
include/: main.h  trace_categories.h  utils.h  yolov8Predictor.h  yolov8_predictor.h
src/: main.cpp  utils.cpp  yolov8Predictor.cpp  yolov8_predictor.cpp
